[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-api-traffic-detector"
version = "0.1.0"
description = "A detector for agent and API traffic extracted from network-anomaly-monitor."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Aaron Rusz"}]
license = {text = "GPL-3.0-or-later"}
keywords = ["agent", "api", "traffic", "detector", "scapy"]
